--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "knex seed:run --env=testing && cross-env DB_ENV=testing jest"
+    "test": "knex seed:run --env=testing && cross-env NODE_ENV=testing jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
